--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>>WEB1 - Welcome</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-STCYEBKV8W"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-STCYEBKV8W');
+    </script>
 </head>
 
 <body>
@@ -16,6 +25,12 @@
     </ol>
     <h2>WEB</h2>
     <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mRIHxB5WE44?si=uCAROzFZdvwln_p_"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
+    <p>
         The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources
         are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the
         Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web
@@ -23,6 +38,52 @@
         outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public
         on the Internet in August 1991.
     </p>
+    <!-- 
+    댓글 라이브러리
+    - disqus
+    - livere
+    -->
+    <div id="disqus_thread"></div>
+
+    <!-- 댓글 기능 js -->
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://saenghwalkoding-web-rodeumaeb.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
+
+    <!-- // 댓글 카운트 js  -->
+    <script id="dsq-count-scr" src="//saenghwalkoding-web-rodeumaeb.disqus.com/count.js" async></script>
+
+
+    <!-- tawk : 채팅 라이브러리  -->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/666fe7a19a809f19fb3e8b43/1i0ii1jvs';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 </html>
