--- a/WEB1/index.html
+++ b/WEB1/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html" style="color: pink;">WEB</a></h1>
     <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
+        <li><a href="1.html" style="color: pink;" >HTML</a></li>
+        <li><a href="2.html" style="color: pink;" >CSS</a></li>
+        <li><a href="3.html" style="color: pink;" >JavaScript</a></li>
     </ol>
     <h2>WEB</h2>
     <p>
