--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
     <h1><a href="index.html" style="color: pink;">WEB</a></h1>
     <ol>
-        <li><a href="1.html" style="color: pink;" >HTML</a></li>
-        <li><a href="2.html" style="color: pink;" >CSS</a></li>
-        <li><a href="3.html" style="color: pink;" >JavaScript</a></li>
+        <li><a href="./WEB1/1.html" style="color: pink;" >HTML</a></li>
+        <li><a href="./WEB1/2.html" style="color: pink;" >CSS</a></li>
+        <li><a href="./WEB1/3.html" style="color: pink;" >JavaScript</a></li>
     </ol>
     <h2>WEB</h2>
     <p>
