--- a/WEB1/3.html
+++ b/WEB1/3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB1 - HTML</title>
+    <title>WEB1 - JS</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-STCYEBKV8W"></script>
     <script>
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <h1><a href="../index.html">WEB</a></h1>
+    <h1><a href="../../WEB_basic/index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html">CSS</a></li>
