--- a/WEB1/1.html
+++ b/WEB1/1.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h1><a href="../index.html">WEB</a></h1>
+    <h1><a href="../../WEB_basic/index.html">WEB</a></h1>
     <ol>
         <li><a href="1.html">HTML</a></li>
         <li><a href="2.html" style="text-decoration:underline; color:skyblue">CSS</a></li>
