--- a/WEB1/3.html
+++ b/WEB1/3.html
@@ -11,13 +11,14 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-STCYEBKV8W');
     </script>
 </head>
 
 <body>
     <h1><a href="./../index.html">WEB</a></h1>
+    <input type="button" value="night" onclick="">
+    <input type="button" value="day" onclick="">
     <ol>
         <li><a href="./1.html">HTML</a></li>
         <li><a href="./2.html">CSS</a></li>
